--- a/guns-film/pom.xml
+++ b/guns-film/pom.xml
@@ -4,12 +4,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.stylefeng.guns</groupId>
-    <artifactId>guns-gateway</artifactId>
+    <artifactId>guns-film</artifactId>
     <version>0.0.1</version>
     <packaging>jar</packaging>
 
-    <name>guns-gateway</name>
-    <description>API网关服务</description>
+    <name>guns-film</name>
+    <description>影片服务</description>
 
     <parent>
         <groupId>com.stylefeng</groupId>
@@ -55,10 +55,6 @@
         <dependency>
             <groupId>com.stylefeng</groupId>
             <artifactId>guns-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
         </dependency>
     </dependencies>
 
