--- a/guns-gateway/src/main/resources/application.yml
+++ b/guns-gateway/src/main/resources/application.yml
@@ -8,7 +8,7 @@ jwt:
   expiration: 604800
   auth-path: auth
   md5-key: randomKey
-  ignore-url: /user/register,/user/check,/film/getIndex,/film/getConditionList #忽略列表
+  ignore-url: /user/register,/user/check,/film/getIndex,/film/getConditionList,/film/getFilms #忽略列表
 
 server:
   port: 80 #项目端口
